# space-filling-curves-sudoku-solver

./: .cursorrules  .gitignore  CMakeLists.txt  Makefile  Makefile.old  README.md
src/: grid.f90  peano.f90  row_major.f90  row_major_to_peano.f90
src/common/: CMakeLists.txt  format_conversions.f90  grid_blocks.f90  grid_interface.f90  utils.f90
src/curves/: hilbert.f90
src/grid2x2/: grid.f90  peano.f90
src/grid3x3/: grid.f90  peano.f90
src/main/: row_major_to_hilbert.f90  row_major_to_peano.f90  sudoku_solver.f90
src/old/: grid.f90  sudoku_solver.f90
src/test/: CMakeLists.txt  test_format_conversions.f90  test_grid_blocks.f90  test_grid_interface.f90
src/tests/: test_2x2.f90  test_3x3.f90  test_utils.f90
test_results/: .gitkeep
